--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,7 +2,7 @@
     background-color: white;
     height: 80px;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     flex-direction: row;
     border-bottom: 1px solid #D5D5D5;
@@ -67,7 +67,7 @@
 
 .nav-text {
     display:flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items:  center;
     padding: 8px 0px 8px 16px;
     list-style: none;
@@ -100,7 +100,7 @@
     width: 100%;
     height: 80px;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     border-bottom: 1px solid #2A4865;
 }
