--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;1,200;1,300;1,400;1,600&display=swap');
 * {
     box-sizing: border-box;
     margin: 0;
@@ -21,5 +21,11 @@ body{
 }
 
 .contenido {
+    transition: 350ms;
     padding: 20px;
+}
+
+.nav-activado{
+    transition: 350ms;
+    padding-left: 270px;
 }
