Contenedor de foto corregido

--- a/src/components/ConsultaCredencial/ConsultaCredencial.css
+++ b/src/components/ConsultaCredencial/ConsultaCredencial.css
@@ -23,7 +23,7 @@
     border: 3px solid #cecece;
 }
 /* Contenedor de la foto */
-.cont_foto{
+.cont_foto_cons{
     padding: 20px 0px;
     width: 200px;
 }
