--- a/src/components/ConsultarUsuarios/ConsultaUsuarios.css
+++ b/src/components/ConsultarUsuarios/ConsultaUsuarios.css
@@ -99,14 +99,18 @@
 }
 
 .tabla .rol {
-    width: 120px;
+    min-width: 170px;
 }
 .tabla .matricula {
     min-width: 200px;
 }
 
 .tabla .activo {
-    width: 50px;
+    min-width: 50px;
+}
+
+.tabla .th-nombre{
+    min-width: 200px;
 }
 
 .tabla tr:nth-child(even){ background-color: #f2f2f2; }
@@ -116,7 +120,8 @@
 }
 
 .modulos{
-    width: fit-content;
+    /* width: fit-content; */
+    width: 100%;
     overflow: visible;
 }
 
