--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -220,3 +220,12 @@ span {
     max-width: 145px;
     overflow: hidden;
 }
+
+
+@media only screen and (max-width: 1365px){
+    .nav-menu{
+        -webkit-box-shadow: -1px 0px 20px 0px rgba(0,0,0,0.29);
+        -moz-box-shadow: -1px 0px 20px 0px rgba(0,0,0,0.29);
+        box-shadow: -1px 0px 20px 0px rgba(0,0,0,0.29);
+    }
+}
