--- a/src/components/GeneralUseComp/Loader.css
+++ b/src/components/GeneralUseComp/Loader.css
@@ -1,20 +1,20 @@
 .lds-ring {
     display: inline-block;
     position: relative;
-    width: 80px;
-    height: 80px;
+    width: 50px;
+    height: 50px;
   }
   .lds-ring div {
     box-sizing: border-box;
     display: block;
     position: absolute;
-    width: 64px;
-    height: 64px;
-    margin: 8px;
-    border: 8px solid #5555;
+    width: 32px;
+    height: 32px;
+    margin: 3px;
+    border: 3px solid #d1d1d1;
     border-radius: 50%;
     animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-    border-color: #555555 transparent transparent transparent;
+    border-color: #d1d1d1 transparent transparent transparent;
   }
   .lds-ring div:nth-child(1) {
     animation-delay: -0.45s;
