--- a/src/components/Main/MainComponent.css
+++ b/src/components/Main/MainComponent.css
@@ -2,7 +2,7 @@
     width: 350px;
 }
 
-.fila {
+.main_fila {
     display: flex;
     flex-direction: row;
 }
@@ -49,7 +49,7 @@
     box-sizing: border-box;
     background-color: white;
     border: 2px solid #f0f0f0;
-    width: 340px;
+    width: 415px;
     border-radius: 5px;
     padding: 15px;
     height: 100%;
@@ -80,4 +80,29 @@
     width:34px;
     padding-top:4px;
     font-size:20px;
+}
+
+@media only screen and (max-width: 855px){
+    .main_fila{
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .caja-main-iz{
+        width: 100%;
+        min-width: 100px;
+    }
+
+    .caja-main-der{
+        width: 100%;
+        min-width: 100px;
+    }
+    .col-iz{
+        max-width: 100%;
+        min-width: 100px;
+    }
+    .col-der{
+        max-width: 100%;
+        min-width: 100px;
+    }
 }
