--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,6 +1,6 @@
 .navbar {
     background-color: white;
-    height: 80px;
+    height: 64px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -29,8 +29,8 @@
     justify-content: center;
     position: fixed;
     top: 0;
-    left: -100%;
-    transition:850ms;
+    left: -250px;
+    transition: 350ms;
     flex-direction: column;
 }
 
@@ -223,9 +223,15 @@ span {
 
 
 @media only screen and (max-width: 1365px){
-    .nav-menu{
+    .nav-menu.active{
         -webkit-box-shadow: -1px 0px 20px 0px rgba(0,0,0,0.29);
         -moz-box-shadow: -1px 0px 20px 0px rgba(0,0,0,0.29);
         box-shadow: -1px 0px 20px 0px rgba(0,0,0,0.29);
+    }
+
+    .nav-menu{
+        -webkit-box-shadow: 0px 0px 0px 0px rgba(0,0,0,0);
+        -moz-box-shadow: 0px 0px 0px 0px rgba(0,0,0,0);
+        box-shadow: 0px 0px 0px 0px rgba(0,0,0,0);
     }
 }
