--- a/src/components/PaginaNoEncontrada/PaginaNoEncontrada.css
+++ b/src/components/PaginaNoEncontrada/PaginaNoEncontrada.css
@@ -1,6 +1,8 @@
 .message-box {
     height: 200px;
-    width: 380px;
+    min-width: 100px;
+    width: calc(100% - 40px);
+    max-width: 380px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -12,6 +14,7 @@
   .hexagons{
       position: absolute;
       right: 50%;
+      z-index: -100;
   }
   .message-box h1 {
     margin-left: 0;
@@ -60,11 +63,21 @@
       transform: translateY(20px);
     }
   }
+
+  @media (max-width: 1027px){
+    .message-box{
+      width: 220px;
+    }
+    .buttons-con{
+      position: absolute;
+      width: fit-content;
+    }
+  }
   @media (max-width: 860px) {
     .hexagons {
       position: absolute;
       z-index: -100;
-      top: 350px;
+      top: 330px;
       left: 50%;
       margin-top: -250px;
       margin-left: -190px;
@@ -72,10 +85,14 @@
     }
     .message-box {
       top: calc(50% + 50px);
-      left: 50%;
+      left: calc(50% + 55px);
       margin-top: -100px;
       margin-left: -190px;
       text-align: center;
       z-index: -100;
     }
+  }
+
+  @media (max-width: 860px){
+    
   }
