--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -88,6 +88,11 @@
     padding: 0 16px;
 }
 
+.main-title , .main-title:visited, .main-title:active, .main-title:hover {
+    text-decoration: none;
+    color: white;
+}
+
 .nav-text:hover {
     background-color: #11293F;
 }
@@ -100,7 +105,7 @@
 .navbar-toggle {
     background-color: #051E34;
     width: 100%;
-    height: 80px;
+    height: 64px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
