--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -6,6 +6,7 @@
     align-items: center;
     flex-direction: row;
     border-bottom: 1px solid #D5D5D5;
+    z-index: 100;
 }
 
 .menu-bars {
@@ -33,6 +34,7 @@
     left: -250px;
     transition: 350ms;
     flex-direction: column;
+    z-index: 100;
 }
 
 .nav-menu.active {
@@ -55,6 +57,7 @@
     visibility: hidden;
     opacity: 0;
     flex-direction: column;
+    z-index: 100;
     transition: visibility 0s, opacity 0.2s linear;
     -webkit-box-shadow: 0px 0px 19px -5px rgba(0,0,0,0.34);
     -moz-box-shadow: 0px 0px 19px -5px rgba(0,0,0,0.34);
