--- a/src/App.css
+++ b/src/App.css
@@ -37,12 +37,14 @@ body{
 .nav-activado{
     transition: 350ms;
     padding-left: 270px;
+    overflow : hidden;
 }
 
 
 @media only screen and (max-width: 1365px){
     .nav-activado{
-        padding-left: 20px
+        padding-left: 20px;
+        overflow : hidden;
     }
 }
 
