--- a/src/components/ConsultarUsuarios/ConsultaUsuarios.css
+++ b/src/components/ConsultarUsuarios/ConsultaUsuarios.css
@@ -63,6 +63,7 @@
 .datos_usuario{
     width: 50%;
     min-width: 700px;
+    min-height: 256px;
 }
 
 .img_contenedor_principal{
@@ -92,6 +93,13 @@
     border-collapse: collapse;
     margin-top: 15px;
     overflow: visible;
+    height: auto;
+}
+
+.datos-tabla{
+    overflow-y: scroll;
+    height: calc(100vh - 586px);
+    min-height: 200px;
 }
 
 .tabla th, .tabla td {
@@ -123,7 +131,7 @@
     width: 25%;
 }
 
-.tabla .activo {
+.tabla .activo-tabla {
     min-width: 150px;
     width: 25%;
 }
@@ -145,7 +153,7 @@
     overflow: visible;
 }
 
-.adjustable_td{
+.tabla .adjustable_td{
     width: 50%;
 }
 
@@ -258,13 +266,18 @@
     }
 
     .tabla .th-nombre, .tabla .rol{
-        min-width: 100px;
+        min-width: 140px;
         width: fit-content;
     }
-    .tabla .activo{
+    .tabla .activo-tabla{
         min-width: 75px;
         width: fit-content;
     }
+
+    .datos-tabla{
+        max-height: 383px;
+    }
+
 }
 
 @media only screen and (max-width: 1115px){
@@ -289,8 +302,12 @@
     .img_contenedor_principal{
         display: block;
     }
+    .desc-modulo{
+        font-size: 1.55vw;
+    }
 
 }
 
 @media only screen and (max-width: 737px){
+    
 }
