Correcciones de interfaz

--- a/src/components/ConsultarUsuarios/ConsultaUsuarios.css
+++ b/src/components/ConsultarUsuarios/ConsultaUsuarios.css
@@ -247,6 +247,9 @@
     display: flex;
     flex-direction: row;
 }
+.resize-title{
+    font-size: 1.8em;
+}
 
 @media only screen and (max-width: 1538px){
     .img_contenedor_principal{
