--- a/src/components/MyAccount/BtnSeccion.css
+++ b/src/components/MyAccount/BtnSeccion.css
@@ -17,3 +17,9 @@
     border-left: 5px solid #618aaf;
     background-color: rgb(245, 245, 245);
 }
+
+@media only screen and (max-width: 855px){
+    .tres-puntos{
+        max-width: calc(100vw - 125px);
+    }
+}
