--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -18,8 +18,31 @@
 }
 
 .menu-bars.active {
-    margin-left: 265px;
+    margin-left: 250px;
     transition:350ms;
+}
+
+.activate-button.active{
+    margin-left: 0rem;
+    position: fixed;
+    background-color: #051E34;
+    border-radius: 24px 0px 0px 24px;
+    transform: rotate(180deg);
+    transition: 350ms;
+}
+
+.activate-button {
+    margin-top: -1.25rem;
+    margin-left: -1.5rem;
+    position: fixed;
+    font-size: 42px;
+    padding: 6px;
+    border-radius: 24px;
+    transition: 350ms;
+}
+
+.activate-button:hover {
+    background-color: #051E34;
 }
 
 .nav-menu {
