--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -31,7 +31,6 @@
     font-size: 14px;
     display: block;
     width: 100%;
-    margin-top: 15px;
     margin-left: 0;
 }
 
@@ -49,6 +48,13 @@
 .extra-info {
     color: #AAAAAA;
     text-align: center;
+}
+
+.mensaje-error {
+    color: red;
+    text-align: right;
+    width: 100%;
+    font-size: 14px;
 }
 
 @media only screen and (max-width: 600px) {
