--- a/src/components/AcercaDe/AcercaDe.css
+++ b/src/components/AcercaDe/AcercaDe.css
@@ -1,5 +1,9 @@
 .acercade{
     color: #555555;
+    -webkit-user-select: none; /* Safari */        
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
 }
 
 .abajo{
